src/main/java/KotlinParser.java
// Generated from KotlinParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KotlinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, SNGL_CMNT=2, MLTI_CMNT=3, PACKAGE=4, IMPORT=5, CLASS=6, INTERFACE=7, 
		FUN=8, VAR=9, VAL=10, RETURN=11, IF=12, ELSE=13, FOR=14, WHILE=15, WHEN=16, 
		DOWNTO=17, STEP=18, NULL=19, TRUE=20, FALSE=21, THIS=22, CONTINUE=23, 
		BREAK=24, OVERRIDE=25, PUBLIC=26, PRIVATE=27, INTERNAL=28, PROTECTED=29, 
		ABSTRACT=30, FINAL=31, OPEN=32, DBLE_Q=33, TMPL_ENTRY=34, IS=35, NOT_IS=36, 
		IN=37, NOT_IN=38, CASE=39, ELVIS=40, ALL=41, INCR=42, DECR=43, PLUS_ASSN=44, 
		MINUS_ASSN=45, MULTI_ASSN=46, DIVIDE_ASSN=47, REMAIN_ASSN=48, PLUS=49, 
		MINUS=50, MULTI=51, DIVIDE=52, REMAIN=53, COLON=54, COMMA=55, RANGE=56, 
		DOT=57, NEGATE=58, AND=59, OR=60, REF_EQUAL=61, REF_NEQUAL=62, EQUAL=63, 
		NEQUAL=64, GRTR_EQ=65, GRTR=66, LESS_EQ=67, LESS=68, QUESTION=69, L_PAREN=70, 
		R_PAREN=71, L_BRACKET=72, R_BRACKET=73, SNGL_Q=74, R_BRACE=75, L_BRACE=76, 
		DOLLAR=77, ASSIGN=78, REAL=79, INT=80, BOOL=81, SINGLE_CH=82, ID=83, CHAR=84, 
		NL=85, SEMICOLON=86;
	public static final int
		RULE_prog = 0, RULE_root_elem = 1, RULE_package_def = 2, RULE_import_stmt = 3, 
		RULE_loop = 4, RULE_for_loop = 5, RULE_while_loop = 6, RULE_assign_op = 7, 
		RULE_equal_op = 8, RULE_comp_op = 9, RULE_check_op = 10, RULE_add_op = 11, 
		RULE_mult_op = 12, RULE_prefix = 13, RULE_postfix = 14, RULE_modifier = 15, 
		RULE_expr = 16, RULE_expr_or = 17, RULE_expr_and = 18, RULE_expr_eq = 19, 
		RULE_expr_comp = 20, RULE_expr_check = 21, RULE_expr_elvis = 22, RULE_expr_infix = 23, 
		RULE_expr_range = 24, RULE_expr_add = 25, RULE_expr_mult = 26, RULE_expr_pre = 27, 
		RULE_expr_post = 28, RULE_expr_term = 29, RULE_paren_expr = 30, RULE_if_expr = 31, 
		RULE_when_expr = 32, RULE_when_targ = 33, RULE_when_case = 34, RULE_jumps = 35, 
		RULE_class_decl = 36, RULE_class_body = 37, RULE_prim_cstr = 38, RULE_inherit = 39, 
		RULE_func_decl = 40, RULE_func_body = 41, RULE_param_list = 42, RULE_arg_list = 43, 
		RULE_literal = 44, RULE_str = 45, RULE_str_elem = 46, RULE_smpl_tmpl = 47, 
		RULE_expr_tmpl = 48, RULE_assn_rhs = 49, RULE_reassn_rhs = 50, RULE_var_decl = 51, 
		RULE_assn = 52, RULE_stmt = 53, RULE_decl = 54, RULE_identifier = 55, 
		RULE_type_def = 56, RULE_type = 57, RULE_block = 58, RULE_n = 59, RULE_sep = 60;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "root_elem", "package_def", "import_stmt", "loop", "for_loop", 
			"while_loop", "assign_op", "equal_op", "comp_op", "check_op", "add_op", 
			"mult_op", "prefix", "postfix", "modifier", "expr", "expr_or", "expr_and", 
			"expr_eq", "expr_comp", "expr_check", "expr_elvis", "expr_infix", "expr_range", 
			"expr_add", "expr_mult", "expr_pre", "expr_post", "expr_term", "paren_expr", 
			"if_expr", "when_expr", "when_targ", "when_case", "jumps", "class_decl", 
			"class_body", "prim_cstr", "inherit", "func_decl", "func_body", "param_list", 
			"arg_list", "literal", "str", "str_elem", "smpl_tmpl", "expr_tmpl", "assn_rhs", 
			"reassn_rhs", "var_decl", "assn", "stmt", "decl", "identifier", "type_def", 
			"type", "block", "n", "sep"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'package '", "'import '", "'class'", "'interface'", 
			"'fun'", "'var'", "'val'", "'return'", "'if'", "'else'", "'for'", "'while'", 
			"'when'", "'downTo'", "'step'", "'null'", "'true'", "'false'", "'this'", 
			"'continue'", "'break'", "'override'", "'public'", "'private'", "'internal'", 
			"'protected'", "'abstract'", "'final'", "'open'", "'\"'", "'${'", "'is'", 
			"'!is'", "'in'", "'!in'", "'->'", "'?:'", "'.*'", "'++'", "'--'", "'+='", 
			"'-='", "'*='", "'/='", "'%='", "'+'", "'-'", "'*'", "'/'", "'%'", "':'", 
			"','", "'..'", "'.'", "'!'", "'&&'", "'||'", "'==='", "'!=='", "'=='", 
			"'!='", "'>='", "'>'", "'<='", "'<'", "'?'", "'('", "')'", "'['", "']'", 
			"'''", "'}'", "'{'", "'$'", "'='", null, null, null, null, null, null, 
			null, "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "SNGL_CMNT", "MLTI_CMNT", "PACKAGE", "IMPORT", "CLASS", "INTERFACE", 
			"FUN", "VAR", "VAL", "RETURN", "IF", "ELSE", "FOR", "WHILE", "WHEN", 
			"DOWNTO", "STEP", "NULL", "TRUE", "FALSE", "THIS", "CONTINUE", "BREAK", 
			"OVERRIDE", "PUBLIC", "PRIVATE", "INTERNAL", "PROTECTED", "ABSTRACT", 
			"FINAL", "OPEN", "DBLE_Q", "TMPL_ENTRY", "IS", "NOT_IS", "IN", "NOT_IN", 
			"CASE", "ELVIS", "ALL", "INCR", "DECR", "PLUS_ASSN", "MINUS_ASSN", "MULTI_ASSN", 
			"DIVIDE_ASSN", "REMAIN_ASSN", "PLUS", "MINUS", "MULTI", "DIVIDE", "REMAIN", 
			"COLON", "COMMA", "RANGE", "DOT", "NEGATE", "AND", "OR", "REF_EQUAL", 
			"REF_NEQUAL", "EQUAL", "NEQUAL", "GRTR_EQ", "GRTR", "LESS_EQ", "LESS", 
			"QUESTION", "L_PAREN", "R_PAREN", "L_BRACKET", "R_BRACKET", "SNGL_Q", 
			"R_BRACE", "L_BRACE", "DOLLAR", "ASSIGN", "REAL", "INT", "BOOL", "SINGLE_CH", 
			"ID", "CHAR", "NL", "SEMICOLON"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KotlinParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KotlinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(KotlinParser.EOF, 0); }
		public Package_defContext package_def() {
			return getRuleContext(Package_defContext.class,0);
		}
		public List<Import_stmtContext> import_stmt() {
			return getRuleContexts(Import_stmtContext.class);
		}
		public Import_stmtContext import_stmt(int i) {
			return getRuleContext(Import_stmtContext.class,i);
		}
		public Root_elemContext root_elem() {
			return getRuleContext(Root_elemContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PACKAGE) {
				{
				setState(122);
				package_def();
				}
			}

			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(125);
				import_stmt();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << INTERFACE) | (1L << FUN) | (1L << VAR) | (1L << VAL) | (1L << OVERRIDE) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << INTERNAL) | (1L << PROTECTED) | (1L << ABSTRACT) | (1L << FINAL) | (1L << OPEN))) != 0) || _la==NL) {
				{
				setState(131);
				root_elem();
				}
			}

			setState(134);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Root_elemContext extends ParserRuleContext {
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public List<SepContext> sep() {
			return getRuleContexts(SepContext.class);
		}
		public SepContext sep(int i) {
			return getRuleContext(SepContext.class,i);
		}
		public Root_elemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root_elem; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitRoot_elem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Root_elemContext root_elem() throws RecognitionException {
		Root_elemContext _localctx = new Root_elemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_root_elem);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			decl();
			setState(142);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(137);
					sep();
					setState(138);
					decl();
					}
					} 
				}
				setState(144);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(145);
				sep();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Package_defContext extends ParserRuleContext {
		public TerminalNode PACKAGE() { return getToken(KotlinParser.PACKAGE, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public Package_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitPackage_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Package_defContext package_def() throws RecognitionException {
		Package_defContext _localctx = new Package_defContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_package_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(PACKAGE);
			setState(149);
			identifier();
			setState(150);
			sep();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_stmtContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(KotlinParser.IMPORT, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public TerminalNode ALL() { return getToken(KotlinParser.ALL, 0); }
		public Import_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitImport_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_stmtContext import_stmt() throws RecognitionException {
		Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_import_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(IMPORT);
			setState(153);
			identifier();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ALL) {
				{
				setState(154);
				match(ALL);
				}
			}

			setState(157);
			sep();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoopContext extends ParserRuleContext {
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public LoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoopContext loop() throws RecognitionException {
		LoopContext _localctx = new LoopContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_loop);
		try {
			setState(161);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				for_loop();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 2);
				{
				setState(160);
				while_loop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class For_loopContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(KotlinParser.FOR, 0); }
		public List<NContext> n() {
			return getRuleContexts(NContext.class);
		}
		public NContext n(int i) {
			return getRuleContext(NContext.class,i);
		}
		public TerminalNode L_PAREN() { return getToken(KotlinParser.L_PAREN, 0); }
		public TerminalNode ID() { return getToken(KotlinParser.ID, 0); }
		public TerminalNode IN() { return getToken(KotlinParser.IN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_PAREN() { return getToken(KotlinParser.R_PAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(KotlinParser.SEMICOLON, 0); }
		public For_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_loop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitFor_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final For_loopContext for_loop() throws RecognitionException {
		For_loopContext _localctx = new For_loopContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_for_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(FOR);
			setState(164);
			n();
			setState(165);
			match(L_PAREN);
			setState(166);
			n();
			setState(167);
			match(ID);
			setState(168);
			n();
			setState(169);
			match(IN);
			setState(170);
			n();
			setState(171);
			expr();
			setState(172);
			n();
			setState(173);
			match(R_PAREN);
			setState(174);
			n();
			setState(178);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case L_BRACE:
				{
				setState(175);
				block();
				}
				break;
			case CLASS:
			case INTERFACE:
			case FUN:
			case VAR:
			case VAL:
			case RETURN:
			case IF:
			case FOR:
			case WHILE:
			case WHEN:
			case NULL:
			case THIS:
			case CONTINUE:
			case BREAK:
			case OVERRIDE:
			case PUBLIC:
			case PRIVATE:
			case INTERNAL:
			case PROTECTED:
			case ABSTRACT:
			case FINAL:
			case OPEN:
			case DBLE_Q:
			case INCR:
			case DECR:
			case PLUS:
			case MINUS:
			case NEGATE:
			case L_PAREN:
			case REAL:
			case INT:
			case BOOL:
			case SINGLE_CH:
			case ID:
			case NL:
				{
				setState(176);
				stmt();
				}
				break;
			case SEMICOLON:
				{
				setState(177);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_loopContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(KotlinParser.WHILE, 0); }
		public List<NContext> n() {
			return getRuleContexts(NContext.class);
		}
		public NContext n(int i) {
			return getRuleContext(NContext.class,i);
		}
		public TerminalNode L_PAREN() { return getToken(KotlinParser.L_PAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode R_PAREN() { return getToken(KotlinParser.R_PAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(KotlinParser.SEMICOLON, 0); }
		public While_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_loop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitWhile_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final While_loopContext while_loop() throws RecognitionException {
		While_loopContext _localctx = new While_loopContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_while_loop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(WHILE);
			setState(181);
			n();
			setState(182);
			match(L_PAREN);
			setState(183);
			n();
			setState(184);
			expr();
			setState(185);
			n();
			setState(186);
			match(R_PAREN);
			setState(187);
			n();
			setState(191);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case L_BRACE:
				{
				setState(188);
				block();
				}
				break;
			case CLASS:
			case INTERFACE:
			case FUN:
			case VAR:
			case VAL:
			case RETURN:
			case IF:
			case FOR:
			case WHILE:
			case WHEN:
			case NULL:
			case THIS:
			case CONTINUE:
			case BREAK:
			case OVERRIDE:
			case PUBLIC:
			case PRIVATE:
			case INTERNAL:
			case PROTECTED:
			case ABSTRACT:
			case FINAL:
			case OPEN:
			case DBLE_Q:
			case INCR:
			case DECR:
			case PLUS:
			case MINUS:
			case NEGATE:
			case L_PAREN:
			case REAL:
			case INT:
			case BOOL:
			case SINGLE_CH:
			case ID:
			case NL:
				{
				setState(189);
				stmt();
				}
				break;
			case SEMICOLON:
				{
				setState(190);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_opContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(KotlinParser.ASSIGN, 0); }
		public TerminalNode PLUS_ASSN() { return getToken(KotlinParser.PLUS_ASSN, 0); }
		public TerminalNode MINUS_ASSN() { return getToken(KotlinParser.MINUS_ASSN, 0); }
		public TerminalNode MULTI_ASSN() { return getToken(KotlinParser.MULTI_ASSN, 0); }
		public TerminalNode DIVIDE_ASSN() { return getToken(KotlinParser.DIVIDE_ASSN, 0); }
		public TerminalNode REMAIN_ASSN() { return getToken(KotlinParser.REMAIN_ASSN, 0); }
		public Assign_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_op; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitAssign_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_opContext assign_op() throws RecognitionException {
		Assign_opContext _localctx = new Assign_opContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assign_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(193);
			_la = _input.LA(1);
			if ( !(((((_la - 44)) & ~0x3f) == 0 && ((1L << (_la - 44)) & ((1L << (PLUS_ASSN - 44)) | (1L << (MINUS_ASSN - 44)) | (1L << (MULTI_ASSN - 44)) | (1L << (DIVIDE_ASSN - 44)) | (1L << (REMAIN_ASSN - 44)) | (1L << (ASSIGN - 44)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Equal_opContext extends ParserRuleContext {
		public TerminalNode REF_EQUAL() { return getToken(KotlinParser.REF_EQUAL, 0); }
		public TerminalNode REF_NEQUAL() { return getToken(KotlinParser.REF_NEQUAL, 0); }
		public TerminalNode EQUAL() { return getToken(KotlinParser.EQUAL, 0); }
		public TerminalNode NEQUAL() { return getToken(KotlinParser.NEQUAL, 0); }
		public Equal_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equal_op; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitEqual_op(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Equal_opContext equal_op() throws RecognitionException {
		Equal_opContext _localctx = new Equal_opContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_equal_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			_la = _input.LA(1);
			if ( !(((((_la - 61)) & ~0x3f) == 0 && ((1L << (_la - 61)) & ((1L << (REF_EQUAL - 61)) | (1L << (REF_NEQUAL - 61)) | (1L << (EQUAL - 61)) | (1L << (NEQUAL - 61)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Comp_opContext extends ParserRuleContext {
		public TerminalNode GRTR_EQ() { return getToken(KotlinParser.GRTR_EQ, 0); }
		public TerminalNode GRTR() { return getToken(KotlinParser.GRTR, 0); }
		public TerminalNode LESS_EQ() { return getToken(KotlinParser.LESS_EQ, 0); }
		public TerminalNode LESS() { return getToken(KotlinParser.LESS, 0); }
		public Comp_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp_op; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof KotlinParserVisitor ) return ((KotlinParserVisitor<? extends T>)visitor).visitComp_op(this);
			else return visitor.visitChildren(this);
		}
	}
